Copia de seguridad Jueves a las 9:30

--- a/app/src/main/res/layout/index_activity.xml
+++ b/app/src/main/res/layout/index_activity.xml
@@ -58,7 +58,7 @@
                 android:layout_weight="1"
                 android:backgroundTint="@color/colorPrimaryDark"
                 android:foregroundGravity="center"
-                android:onClick="invitado"
+                android:onClick="invitar"
                 android:text="Invitado"
                 android:textColor="@android:color/background_light" />
 
